# copr-hs

./: .travis.yml  README.md  copr.cabal
src/Fedora/: Copr.hs
src/Fedora/Copr/: CoprBuild.hs  CoprProject.hs  CoprStatus.hs  ListCoprs.hs  NewCopr.hs
