name:                copr
version:             1.0.0
synopsis:            Haskell interface to the Fedora Copr system
homepage:            https://github.com/CodeBlock/copr-hs
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           2014 Ricky Elrod
category:            Fedora
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Fedora.Copr
                     , Fedora.Copr.ListCoprs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson >= 0.6
                     , base >=4.6 && <4.7
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , http-streams >= 0.7
                     , io-streams >= 1.1
                     , semigroups >= 0.12
                     , text >= 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

test-suite hlint
  hs-source-dirs:      tests
  main-is:             hlint.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlint >= 1.7
